# finalcut

./: .ChangeLog.swp  .bettercodehub.yml  .build.sh.swp  .codacy.yml  .codedocs  .coveralls.yml  .editorconfig  .gitignore  .lgtm.yml  .travis.yml  .travis.yml.swp  AUTHORS  CODE_OF_CONDUCT.md  ChangeLog  Contributing.md  Findfinalcut.cmake  Makefile.am  Makefile.in  README.md  README.md.backup  SECURITY.md  aclocal.m4  artix-install.sh  autogen.sh  build.sh  codecov.yml  confdefs.h  config.h.in  configure  configure.ac  finalcut.changes  finalcut.pc.in  finalcut.spec  finalcut.spec.in  move-to-new-structure.sh  rxvt-cygwin-native.raw  rxvt-cygwin-native2.raw  sigrid.yaml  sonar-project.properties  src  (+1 more)
doc/: 100prozent.txt  Makefile  Makefile.am  Makefile.in  TODO  VTerm.txt  benchmark.md  build_alpine_linux.txt  build_openbsd.txt  build_solaris.txt  class-diagram.txt  class_template.cpp  class_template.h  coding-style.txt  console_codes-manual.sh  console_ioctl-manual.sh  container-widgets.md  control-widgets.md  display-widgets.md  event-processing.md  faq.md  first-steps.md  framebuffer.txt  getting-started.md  indicator-widgets.md  introduction.md  list-and-data-widgets.md  memory-management.md  mouse-control.md  newfont-8x16.txt  newfont-9x16.txt  readme.txt  signals-and-callbacks.md  terminfo-capabilities.sh  terminfo-manual.sh  user-theme.md  vga.txt  virtual-terminal.txt  widget-layout.md  window-widgets.md  (+2 more)
examples/: 7segment  7segment.cpp  Makefile.am  Makefile.clang  Makefile.gcc  Makefile.in  background-color.cpp  busy  busy.cpp  calculator.cpp  cartesian_graph  cartesian_graph.cpp  checklist.cpp  choice.cpp  dialog.cpp  event-log.cpp  eventloop  eventloop.cpp  fullwidth-character.cpp  hello.cpp  highlight-text.cpp  input-dialog.cpp  keyboard.cpp  listbox.cpp  listview.cpp  mandelbrot.cpp  menu.cpp  mouse.cpp  opti-move.cpp  parallax-scrolling.cpp  rotozoomer.cpp  scrollview.cpp  string-operations.cpp  term-attributes.cpp  termcap.cpp  terminal-focus.cpp  timer.cpp  transparent.cpp  treeview.cpp  ui.cpp  (+5 more)
examples/pixmaps/: colored-pencils.xpm  cpu.xpm  xconq.xpm
final/: Makefile.am  Makefile.clang  Makefile.gcc  fapplication.cpp  fapplication.h  fc.h  fconfig.h  fevent.cpp  fevent.h  final.h  fobject.cpp  fobject.h  fstartoptions.cpp  fstartoptions.h  ftimer.cpp  ftimer.h  ftypes.h  fwidget.cpp  fwidget.h  fwidget_flags.h  fwidget_functions.cpp  fwidget_functions.h  fwidgetcolors.cpp  fwidgetcolors.h  libfinal.so.0
final/dialog/: fdialog.cpp  fdialog.h  ffiledialog.cpp  ffiledialog.h  fmessagebox.cpp  fmessagebox.h
final/eventloop/: CMakeLists.txt  backend_monitor.cpp  backend_monitor.h  eventloop-class-diagram.txt  eventloop.cpp  eventloop.h  eventloop_functions.cpp  eventloop_functions.h  io_monitor.cpp  io_monitor.h  kqueue_timer.cpp  main.cpp  monitor.cpp  monitor.h  pipedata.cpp  pipedata.h  posix_timer.cpp  signal_monitor.cpp  signal_monitor.h  timer_monitor.cpp  timer_monitor.h
final/font/: 40-finalcut-newfont.conf  8x16graph.bdf  Makefile.am  README.md  bdf2code.sh  bdf2pcf.sh  bdfmerge.sh  fonts.alias  fonts.dir  map-newfont  map-vga  newfont.h  newfont.txt  newfont_8x16.h  newfont_9x16.h  unicodemap.h  vgafont.h
final/input/: fkey_hashmap.h  fkey_map.cpp  fkey_map.h  fkeyboard.cpp  fkeyboard.h  fmouse.cpp  fmouse.h
final/menu/: fcheckmenuitem.cpp  fcheckmenuitem.h  fdialoglistmenu.cpp  fdialoglistmenu.h  fmenu.cpp  fmenu.h  fmenubar.cpp  fmenubar.h  fmenuitem.cpp  fmenuitem.h  fmenulist.cpp  fmenulist.h  fradiomenuitem.cpp  fradiomenuitem.h
final/output/: fcolorpalette.cpp  fcolorpalette.h  foutput.cpp  foutput.h
final/util/: char_ringbuffer.cpp  char_ringbuffer.h  emptyfstring.h  fcallback.cpp  fcallback.h  fdata.cpp  fdata.h  flog.cpp  flog.h  flogger.cpp  flogger.h  fpoint.cpp  fpoint.h  frect.cpp  frect.h  fsize.cpp  fsize.h  fstring.cpp  fstring.h  fstringstream.cpp  fstringstream.h  fsystem.cpp  fsystem.h  fsystemimpl.cpp  fsystemimpl.h
final/vterm/: fcolorpair.h  fstyle.h  ftermbuffer.cpp  ftermbuffer.h  fvterm.cpp  fvterm.h  fvtermattribute.cpp  fvtermattribute.h  fvtermbuffer.cpp  fvtermbuffer.h
final/widget/: fbusyindicator.cpp  fbusyindicator.h  fbutton.cpp  fbutton.h  fbuttongroup.cpp  fbuttongroup.h  fcheckbox.cpp  fcheckbox.h  fcombobox.cpp  fcombobox.h  flabel.cpp  flabel.h  flineedit.cpp  flineedit.h  flistbox.cpp  flistbox.h  flistview.cpp  flistview.h  fprogressbar.cpp  fprogressbar.h  fradiobutton.cpp  fradiobutton.h  fscrollbar.cpp  fscrollbar.h  fscrollview.cpp  fscrollview.h  fspinbox.cpp  (+13 more)
fonts/: 8x16graph.bdf  9x16graph_patch.bdf  Makefile.am  Makefile.in  README.md  README.txt  bdf2c.sh  bdf2code.sh  bdf2pcf.sh  bdfmerge.sh  font2c.sh  fonts.alias  fonts.dir  map-newfont  newfont.h  newfont_8x16.h  newfont_9x16.h  unicodemap.h  vgafont.h
src/: .depend  .swp  Makefile.am  Makefile.clang  Makefile.gcc  Makefile.in  fapp.cpp  fapp.h  fapplication.cpp  fbusyindicator.cpp  fbutton.cpp  fbutton.h  fbuttongroup.cpp  fbuttongroup.h  fc.h  fcallback.cpp  fcharmap.cpp  fcharmap.h  fcheckbox.cpp  fcheckbox.h  fcheckmenuitem.cpp  fcheckmenuitem.h  fcolorpalette.cpp  fcombobox.cpp  fconfig.h  fdata.cpp  fdialog.cpp  fdialog.h  fdialoglistmenu.cpp  fdialoglistmenu.h  fenum.h  fevent.cpp  fevent.h  ffiledialog.cpp  ffiledialog.h  final.h  fkey_map.cpp  fkey_map.h  fkeyboard.cpp  flabel.cpp  (+86 more)
test/: Makefile.am  Makefile.clang  Makefile.gcc  Makefile.in  calculator.cpp  char_ringbuffer-test.cpp  choice.cpp  conemu.h  dialog.cpp  eventloop-monitor-test.cpp  fcallback-test.cpp  fcolorpair-test.cpp  fdata-test.cpp  fevent-test.cpp  fkeyboard-test.cpp  flistview-test.cpp  flogger-test.cpp  fmouse-test.cpp  fobject-test.cpp  foptiattr-test.cpp  foptimove-test.cpp  fpoint-test.cpp  frect-test.cpp  fsize-test.cpp  fstring-test.cpp  fstring.cpp  fstringstream-test.cpp  fstyle-test.cpp  fterm_functions-test.cpp  ftermbuffer-test.cpp  ftermcap-test.cpp  ftermcapquirks-test.cpp  ftermdata-test.cpp  ftermdetection-test.cpp  ftermfreebsd-test.cpp  ftermlinux-test.cpp  ftermopenbsd-test.cpp  ftimer-test.cpp  fvterm-test.cpp  fvterm_check.h  (+23 more)
(+257 files in other folders)
