#----------------------------------------------------------------------
# Makefile.am  -  FINAL CUT library
#----------------------------------------------------------------------

docdir = ${datadir}/doc/${PACKAGE}

EXTRA_DIST = \
	build_openbsd.txt \
	build_solaris.txt \
	calendar-draft.png \
	calculator.png \
	class-diagram.txt \
	class_template.cpp \
	class_template.h \
	console_codes-manual.sh \
	console_ioctl-manual.sh \
	faq.md \
	fileopen-dialog.png \
	first-steps.md \
	framebuffer.txt \
	Mandelbrot.png \
	ncurses.supp \
	newfont1.png \
	newfont2.png \
	progress-bar.png \
	readme.txt \
	coding-style.txt \
	terminfo-capabilities.sh \
	terminfo-manual.sh \
	textview.png \
	TODO \
	vga.txt \
	vt100_line_drawing_graphics.png \
	virtual-terminal.txt \
	xterm.txt \
	xgraphics

doc_DATA = \
	build_openbsd.txt \
	build_solaris.txt \
	calendar-draft.png \
	calculator.png \
	class-diagram.txt \
	class_template.cpp \
	class_template.h \
	console_codes-manual.sh \
	console_ioctl-manual.sh \
	faq.md \
	fileopen-dialog.png \
	first-steps.md \
	framebuffer.txt \
	Mandelbrot.png \
	ncurses.supp \
	newfont1.png \
	newfont2.png \
	progress-bar.png \
	readme.txt \
	coding-style.txt \
	terminfo-capabilities.sh \
	terminfo-manual.sh \
	textview.png \
	TODO \
	vga.txt \
	vt100_line_drawing_graphics.png \
	virtual-terminal.txt \
	xterm.txt \
	xgraphics
