#----------------------------------------------------------------------
# Makefile.am  -  FINAL CUT library
#----------------------------------------------------------------------

docdir = ${datadir}/doc/${PACKAGE}

EXTRA_DIST = \
	benchmark.md \
	build_openbsd.txt \
	build_solaris.txt \
	calendar-draft.png \
	calculator.png \
	class-diagram.txt \
	class_template.cpp \
	class_template.h \
	console_codes-manual.sh \
	console_ioctl-manual.sh \
	faq.md \
	fileopen-dialog.png \
	final-cut-application-structure.svg \
	first-steps.md \
	first-steps_callback-function.cpp.png \
	first-steps_callback-lambda.cpp.png \
	first-steps_callback-method.cpp.png \
	first-steps_dialog.cpp.png \
	first-steps_emit-signal.cpp.png \
	first-steps_memory.cpp.png \
	first-steps_scrollview.cpp.png \
	first-steps_size-adjustment.cpp.png \
	first-steps_timer.cpp.png \
	first-steps_user-event.cpp.png \
	framebuffer.txt \
	Mandelbrot.png \
	mouse-control.md \
	ncurses.supp \
	newfont1.png \
	newfont2.png \
	newfont-8x16.txt \
	newfont-9x16.txt \
	progress-bar.png \
	readme.txt \
	coding-style.txt \
	terminfo-capabilities.sh \
	terminfo-manual.sh \
	textview.png \
	TODO \
	user-theme.md \
	user-theme.png \
	user-theme-bee-palette.svg \
	user-theme-fc16-dark-palette.svg \
	user-theme-fc16-palette.svg \
	user-theme-fc8-palette.svg \
	user-theme-vga-palette.svg \
	vga.txt \
	vt100_line_drawing_graphics.png \
	virtual-terminal.txt \
	widget-coordinates.svg \
	widget-geometry.svg \
	widget-lengths.svg \
	xterm.txt \
	xgraphics

doc_DATA = \
	benchmark.md \
	build_openbsd.txt \
	build_solaris.txt \
	calendar-draft.png \
	calculator.png \
	class-diagram.txt \
	class_template.cpp \
	class_template.h \
	console_codes-manual.sh \
	console_ioctl-manual.sh \
	faq.md \
	fileopen-dialog.png \
	final-cut-application-structure.svg \
	first-steps.md \
	first-steps_callback-function.cpp.png \
	first-steps_callback-lambda.cpp.png \
	first-steps_callback-method.cpp.png \
	first-steps_dialog.cpp.png \
	first-steps_emit-signal.cpp.png \
	first-steps_memory.cpp.png \
	first-steps_scrollview.cpp.png \
	first-steps_size-adjustment.cpp.png \
	first-steps_timer.cpp.png \
	first-steps_user-event.cpp.png \
	framebuffer.txt \
	Mandelbrot.png \
	mouse-control.md \
	ncurses.supp \
	newfont1.png \
	newfont2.png \
	newfont-8x16.txt \
	newfont-9x16.txt \
	progress-bar.png \
	readme.txt \
	coding-style.txt \
	terminfo-capabilities.sh \
	terminfo-manual.sh \
	textview.png \
	TODO \
	user-theme.md \
	user-theme.png \
	user-theme-bee-palette.svg \
	user-theme-fc16-dark-palette.svg \
	user-theme-fc16-palette.svg \
	user-theme-fc8-palette.svg \
	user-theme-vga-palette.svg \
	vga.txt \
	vt100_line_drawing_graphics.png \
	virtual-terminal.txt \
	widget-coordinates.svg \
	widget-geometry.svg \
	widget-lengths.svg \
	xterm.txt \
	xgraphics

