#----------------------------------------------------------------------
# Makefile.am  -  FINAL CUT library
#----------------------------------------------------------------------

docdir = ${datadir}/doc/${PACKAGE}

EXTRA_DIST = \
	FDialog.svg \
	Mandelbrot.png \
	TODO \
	benchmark.md \
	build_alpine_linux.txt \
	build_openbsd.txt \
	build_solaris.txt \
	calculator.png \
	calendar-draft.png \
	class-diagram.txt \
	class_template.cpp \
	class_template.h \
	coding-style.txt \
	console_codes-manual.sh \
	console_ioctl-manual.sh \
	container-widgets.md \
	event-processing.md \
	faq.md \
	fileopen-dialog.png \
	final-cut-application-structure.svg \
	final-cut-widget-tree.svg \
	first-steps.md \
	framebuffer.txt \
	getting-started.md \
	memory-management.md \
	mouse-control.md \
	ncurses.supp \
	newfont-8x16.txt \
	newfont-9x16.txt \
	newfont1.png \
	newfont2.png \
	progress-bar.png \
	readme.txt \
	running-callback-function.cpp.png \
	running-callback-lambda.cpp.png \
	running-callback-method.cpp.png \
	running-dialog.cpp.png \
	running-emit-signal.cpp.png \
	running-memory.cpp.png \
	running-scrollview.cpp.png \
	running-size-adjustment.cpp.png \
	running-timer.cpp.png \
	running-user-event.cpp.png \
	signals-and-callbacks.md \
	subsystem-architecture.svg \
	terminfo-capabilities.sh \
	terminfo-manual.sh \
	textview.png \
	user-theme-bee-palette.svg \
	user-theme-fc16-dark-palette.svg \
	user-theme-fc16-palette.svg \
	user-theme-fc8-palette.svg \
	user-theme-vga-palette.svg \
	user-theme.md \
	user-theme.png \
	vga.txt \
	virtual-terminal.txt \
	vt100_line_drawing_graphics.png \
	widget-coordinates.svg \
	widget-geometry.svg \
	widget-layout.md \
	widget-lengths.svg \
	xgraphics \
	xpmview.png \
	xterm.txt

doc_DATA = \
	Mandelbrot.png \
	TODO \
	benchmark.md \
	build_openbsd.txt \
	build_solaris.txt \
	calculator.png \
	calendar-draft.png \
	class-diagram.txt \
	class_template.cpp \
	class_template.h \
	coding-style.txt \
	console_codes-manual.sh \
	console_ioctl-manual.sh \
	container-widgets.md \
	event-processing.md \
	faq.md \
	fileopen-dialog.png \
	final-cut-application-structure.svg \
	final-cut-widget-tree.svg \
	first-steps.md \
	framebuffer.txt \
	getting-started.md \
	memory-management.md \
	mouse-control.md \
	ncurses.supp \
	newfont-8x16.txt \
	newfont-9x16.txt \
	newfont1.png \
	newfont2.png \
	progress-bar.png \
	readme.txt \
	running-callback-function.cpp.png \
	running-callback-lambda.cpp.png \
	running-callback-method.cpp.png \
	running-dialog.cpp.png \
	running-emit-signal.cpp.png \
	running-memory.cpp.png \
	running-scrollview.cpp.png \
	running-size-adjustment.cpp.png \
	running-timer.cpp.png \
	running-user-event.cpp.png \
	signals-and-callbacks.md \
	terminfo-capabilities.sh \
	terminfo-manual.sh \
	textview.png \
	user-theme-bee-palette.svg \
	user-theme-fc16-dark-palette.svg \
	user-theme-fc16-palette.svg \
	user-theme-fc8-palette.svg \
	user-theme-vga-palette.svg \
	user-theme.md \
	user-theme.png \
	vga.txt \
	virtual-terminal.txt \
	vt100_line_drawing_graphics.png \
	widget-coordinates.svg \
	widget-geometry.svg \
	widget-layout.md \
	widget-lengths.svg \
	xgraphics \
	xterm.txt

