#----------------------------------------------------------------------
# Makefile.am  -  the Final Cut library
#----------------------------------------------------------------------

EXTRA_DIST = \
	8x16graph.bdf \
	8x16graph.pcf.gz \
	8x16std \
	bdf2c.sh \
	bdf2pcf.sh \
	font2c.sh \
	fonts.alias \
	fonts.dir \
	Makefile.am \
	newfont.h \
	unicodemap.h \
	vgafont.h
