#----------------------------------------------------------------------
# Makefile.am  -  FINAL CUT library
#----------------------------------------------------------------------

EXTRA_DIST = \
	8x16graph.bdf \
	8x16graph.pcf.gz \
	8x16std \
	bdf2c.sh \
	bdf2pcf.sh \
	font2c.sh \
	fonts.alias \
	fonts.dir \
	Makefile.am \
	newfont.h \
	unicodemap.h \
	vgafont.h

docdir = ${datadir}/doc/${PACKAGE}
doc_DATA = \
	newfont.txt

fontdir = ${datadir}/fonts/X11/misc/${PACKAGE}
font_DATA = \
	8x16graph.pcf.gz \
	fonts.alias \
	fonts.dir
